--- a/EngineLayer/packages.config
+++ b/EngineLayer/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FlashLFQ" version="1.0.90" targetFramework="net451" />
+  <package id="FlashLFQ" version="0.1.92" targetFramework="net451" />
   <package id="MathNet.Numerics" version="3.20.0" targetFramework="net451" />
   <package id="mzLib" version="1.0.225" targetFramework="net451" />
+  <package id="SharpLearning.Common.Interfaces" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.Containers" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.CrossValidation" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.InputOutput" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.Metrics" version="0.25.0.4" targetFramework="net451" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net451" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net451" />
 </packages>
