--- a/TaskLayer/packages.config
+++ b/TaskLayer/packages.config
@@ -5,5 +5,14 @@
   <package id="mzLib" version="1.0.226" targetFramework="net451" />
   <package id="NetSerializer" version="4.1.0" targetFramework="net451" />
   <package id="Nett" version="0.7.0" targetFramework="net451" />
+  <package id="SharpLearning.AdaBoost" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.Common.Interfaces" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.Containers" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.CrossValidation" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.DecisionTrees" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.GradientBoost" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.InputOutput" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.Metrics" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.RandomForest" version="0.25.0.4" targetFramework="net451" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net451" />
 </packages>
