--- a/Test/packages.config
+++ b/Test/packages.config
@@ -6,5 +6,14 @@
   <package id="Nett" version="0.7.0" targetFramework="net451" />
   <package id="NUnit" version="3.8.1" targetFramework="net451" />
   <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net451" />
+  <package id="SharpLearning.AdaBoost" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.Common.Interfaces" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.Containers" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.CrossValidation" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.DecisionTrees" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.GradientBoost" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.InputOutput" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.Metrics" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.RandomForest" version="0.25.0.4" targetFramework="net451" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net451" />
 </packages>
