--- a/GUI/packages.config
+++ b/GUI/packages.config
@@ -13,5 +13,6 @@
   <package id="SharpLearning.InputOutput" version="0.25.0.4" targetFramework="net451" />
   <package id="SharpLearning.Metrics" version="0.25.0.4" targetFramework="net451" />
   <package id="SharpLearning.RandomForest" version="0.25.0.4" targetFramework="net451" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net451" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net451" />
 </packages>
