starting on new window

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -107,10 +107,14 @@
     <Compile Include="CalibrateTaskWindow.xaml.cs">
       <DependentUpon>CalibrateTaskWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ChangeParametersWindow.xaml.cs">
+      <DependentUpon>ChangeParametersWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CollectionForTreeView.cs" />
     <Compile Include="DialogWindow.xaml.cs">
       <DependentUpon>DialogWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="FileSpecficParameterEntry.cs" />
     <Compile Include="FileSpecificParamWindow.xaml.cs">
       <DependentUpon>FileSpecificParamWindow.xaml</DependentUpon>
     </Compile>
@@ -140,6 +144,10 @@
       <DependentUpon>XLSearchTaskWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="CalibrateTaskWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ChangeParametersWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
