--- a/GUI/packages.config
+++ b/GUI/packages.config
@@ -2,13 +2,14 @@
 <packages>
   <package id="FlashLFQ" version="0.1.92" targetFramework="net451" />
   <package id="MathNet.Numerics" version="3.20.0" targetFramework="net451" />
-  <package id="mzLib" version="1.0.227" targetFramework="net451" />
+  <package id="mzLib" version="1.0.228" targetFramework="net451" />
   <package id="Nett" version="0.7.0" targetFramework="net451" />
   <package id="SharpLearning.AdaBoost" version="0.25.0.4" targetFramework="net451" />
   <package id="SharpLearning.Common.Interfaces" version="0.25.0.4" targetFramework="net451" />
   <package id="SharpLearning.Containers" version="0.25.0.4" targetFramework="net451" />
   <package id="SharpLearning.CrossValidation" version="0.25.0.4" targetFramework="net451" />
   <package id="SharpLearning.DecisionTrees" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.Ensemble" version="0.25.0.4" targetFramework="net451" />
   <package id="SharpLearning.GradientBoost" version="0.25.0.4" targetFramework="net451" />
   <package id="SharpLearning.InputOutput" version="0.25.0.4" targetFramework="net451" />
   <package id="SharpLearning.Metrics" version="0.25.0.4" targetFramework="net451" />
