--- a/Test/packages.config
+++ b/Test/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="FlashLFQ" version="0.1.92" targetFramework="net451" />
   <package id="MathNet.Numerics" version="3.20.0" targetFramework="net451" />
-  <package id="mzLib" version="1.0.227" targetFramework="net451" />
+  <package id="mzLib" version="1.0.228" targetFramework="net451" />
   <package id="Nett" version="0.7.0" targetFramework="net451" />
   <package id="NUnit" version="3.8.1" targetFramework="net451" />
   <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net451" />
@@ -11,6 +11,7 @@
   <package id="SharpLearning.Containers" version="0.25.0.4" targetFramework="net451" />
   <package id="SharpLearning.CrossValidation" version="0.25.0.4" targetFramework="net451" />
   <package id="SharpLearning.DecisionTrees" version="0.25.0.4" targetFramework="net451" />
+  <package id="SharpLearning.Ensemble" version="0.25.0.4" targetFramework="net451" />
   <package id="SharpLearning.GradientBoost" version="0.25.0.4" targetFramework="net451" />
   <package id="SharpLearning.InputOutput" version="0.25.0.4" targetFramework="net451" />
   <package id="SharpLearning.Metrics" version="0.25.0.4" targetFramework="net451" />
