--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -126,17 +126,14 @@
     <Compile Include="CalibrationEngine\CalibrationFunctions\IdentityCalibrationFunction.cs" />
     <Compile Include="CalibrationEngine\CalibrationFunctions\LinearCalibrationFunctionMathNet.cs" />
     <Compile Include="CalibrationEngine\CalibrationFunctions\SeparateMzLearner.cs" />
-    <Compile Include="CalibrationEngine\CalibrationSetting.cs" />
     <Compile Include="CalibrationEngine\DataPointAquisitionResults.cs" />
-    <Compile Include="CalibrationEngine\IHasInputsAndOutputs.cs" />
+    <Compile Include="CalibrationEngine\LabeledDataPoint.cs" />
     <Compile Include="CalibrationEngine\LabeledMs2DataPoint.cs" />
     <Compile Include="CalibrationEngine\LabeledMs1DataPoint.cs" />
-    <Compile Include="CalibrationEngine\CalibrationFunctions\RandomForestCalibrationFunction.cs" />
-    <Compile Include="CalibrationEngine\CalibrationFunctions\RegressionTree.cs" />
     <Compile Include="CalibrationEngine\MS1predictor.cs" />
     <Compile Include="CalibrationEngine\MS2predictor.cs" />
-    <Compile Include="CalibrationEngine\TransformFunction.cs" />
     <Compile Include="CalibrationEngine\CalibrationResults.cs" />
+    <Compile Include="CalibrationParameters.cs" />
     <Compile Include="CommonParameters.cs" />
     <Compile Include="CrosslinkSearch\ProductMassesMightHave.cs" />
     <Compile Include="CrosslinkSearch\PsmCrossType.cs" />
