--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -110,7 +110,7 @@
     <Compile Include="IScan.cs" />
     <Compile Include="MetaMorpheusException.cs" />
     <Compile Include="DigestionParams.cs" />
-    <Compile Include="NonSpecificEnzymeSearch\NonSpecificEnzymeEngine.cs" />
+    <Compile Include="NonSpecificEnzymeSearch\NonSpecificEnzymeSearchEngine.cs" />
     <Compile Include="NonSpecificEnzymeSearch\NonSpecificEnzymeSequencesToActualPeptides.cs" />
     <Compile Include="PrecursorSearchModes\AllowedIntervalWithNotch.cs" />
     <Compile Include="CrosslinkAnalysis\CrosslinkAnalysisEngine.cs" />
