--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Analysis\BinTreeStructure.cs" />
     <Compile Include="CalibrationEngine\CalibrationFunctions\IdentityCalibrationFunction.cs" />
     <Compile Include="CalibrationEngine\CalibrationFunctions\LinearCalibrationFunctionMathNet.cs" />
+    <Compile Include="CalibrationEngine\CalibrationFunctions\MzMultiplier.cs" />
     <Compile Include="CalibrationEngine\DataPointAquisitionResults.cs" />
     <Compile Include="CalibrationEngine\LabeledDataPoint.cs" />
     <Compile Include="CalibrationEngine\LabeledMs2DataPoint.cs" />
