--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -126,6 +126,8 @@
     <Compile Include="Localization\LocalizationEngineResults.cs" />
     <Compile Include="ModificationAnalysis\ModificationAnalysisEngine.cs" />
     <Compile Include="ModificationAnalysis\ModificationAnalysisResults.cs" />
+    <Compile Include="PrecursorSearchModes\HighTheoreticalDiffAcceptor.cs" />
+    <Compile Include="PrecursorSearchModes\LowTheoreticalDiffAcceptor.cs" />
     <Compile Include="ProteinParsimony\ProteinGroup.cs" />
     <Compile Include="ProteinParsimony\ProteinParsimonyEngine.cs" />
     <Compile Include="ProteinParsimony\ProteinParsimonyResults.cs" />
