--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -135,7 +135,7 @@
     <Compile Include="CommonParameters.cs" />
     <Compile Include="CrosslinkSearch\ProductMassesMightHave.cs" />
     <Compile Include="CrosslinkSearch\PsmCrossType.cs" />
-    <Compile Include="DataPointAcquisitionEngine.cs" />
+    <Compile Include="CalibrationEngine\DataPointAcquisitionEngine.cs" />
     <Compile Include="IScan.cs" />
     <Compile Include="MetaMorpheusException.cs" />
     <Compile Include="DigestionParams.cs" />
