--- a/Test/SlicedSearchTaskConfig.toml
+++ b/Test/SlicedSearchTaskConfig.toml
@@ -22,6 +22,7 @@ YIons = true
 ZdotIons = false
 CIons = false
 ProductMassTolerance = "±0.0100 Absolute"
+PrecursorMassTolerance = "±5.0000 PPM"
 ConserveMemory = false
 ScoreCutoff = 1.0
 
@@ -36,9 +37,9 @@ QuantifyPpmTol = 5.0
 DoHistogramAnalysis = false
 SearchTarget = true
 SearchDecoy = true
-MassDiffAcceptors = "5ppmAroundZero ppmAroundZero 5"
 WritePrunedDatabase = false
 KeepAllUniprotMods = true
 DoLocalizationAnalysis = true
 DoQuantification = true
 SearchType = "Classic"
+MassDiffAcceptorType = "Exact"
