--- a/TaskLayer/TaskLayer.csproj
+++ b/TaskLayer/TaskLayer.csproj
@@ -126,6 +126,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalibrationParameters.cs" />
+    <Compile Include="MassDiffAcceptorType.cs" />
+    <Compile Include="SearchType.cs" />
     <Compile Include="TaskParameters\CalibrationParameters.cs" />
     <Compile Include="FileSpecificSettings.cs" />
     <Compile Include="EventArgs\XmlForTaskListEventArgs.cs" />
