GUI File Specific Parameters Implementation (#610)
* commit so can merge

* Shorten display filename

* sdv

* done

* asd

* asdf

* Update parametes

* remove commented code

* fixes

* Calibration file specific params implementation

* Fixed display and also made it so cant select files if their parameters differ

* remove unused code

* fix

* Need to commit these before can pull

* MGF support

* AF

* starting on new window

* gui

* More responsive display

* Fixes

* awee

* sadf

* fix of default init methodine values

* fixed issue where double clicking in certain places would cause crash

* Fixed issue where sometimes the Tolerance Type would be incorrect; now if no tolerance type is entered will default to PPM

* Changed display of tolerance to just number.... file should still be in the correct tolerance format

* sdaf

* final fixes

* sdaf

* change back to original account... woops

* Final

* asf

* fixes merge

* sdf

* Fixes/ remove code

* asdf

* codacy fixes

* comments

* asdf

* nothing

* Fixes

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -107,6 +107,9 @@
     <Compile Include="CalibrateTaskWindow.xaml.cs">
       <DependentUpon>CalibrateTaskWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ChangeParametersWindow.xaml.cs">
+      <DependentUpon>ChangeParametersWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CollectionForTreeView.cs" />
     <Compile Include="DialogWindow.xaml.cs">
       <DependentUpon>DialogWindow.xaml</DependentUpon>
@@ -128,15 +131,21 @@
     </Compile>
     <Compile Include="ForDisplayingInDataGrids\RawDataForDataGrid.cs" />
     <Compile Include="ForDisplayingInDataGrids\PreRunTask.cs" />
+    <Compile Include="Parameter.cs" />
     <Compile Include="SearchTaskWindow.xaml.cs">
       <DependentUpon>SearchTaskWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="ForDisplayingInDataGrids\ProteinDbForDataGrid.cs" />
     <Compile Include="InRunTask.cs" />
+    <Compile Include="TheTemplateSelector.cs" />
     <Compile Include="XLSearchTaskWindow.xaml.cs">
       <DependentUpon>XLSearchTaskWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="CalibrateTaskWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ChangeParametersWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
