--- a/EngineLayer/packages.config
+++ b/EngineLayer/packages.config
@@ -3,6 +3,6 @@
   <package id="FlashLFQ" version="0.1.93" targetFramework="net451" />
   <package id="MathNet.Numerics" version="3.20.0" targetFramework="net451" />
   <package id="mzLib" version="1.0.240" targetFramework="net451" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net451" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net451" requireReinstallation="true" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net451" />
 </packages>
