--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -63,6 +63,9 @@
     <Reference Include="MzML, Version=1.0.240.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\mzLib.1.0.240\lib\MzML.dll</HintPath>
     </Reference>
+    <Reference Include="Nett, Version=0.8.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Nett.0.8.0\lib\Net40\Nett.dll</HintPath>
+    </Reference>
     <Reference Include="pepXML, Version=1.0.240.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\mzLib.1.0.240\lib\pepXML.dll</HintPath>
     </Reference>
