--- a/Test/packages.config
+++ b/Test/packages.config
@@ -6,5 +6,6 @@
   <package id="Nett" version="0.8.0" targetFramework="net451" />
   <package id="NUnit" version="3.8.1" targetFramework="net451" />
   <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net451" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net451" />
 </packages>
