--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: csharp
-solution: MetaMorpheus.sln
+mono: none
+dotnet: 1.0.3
+dist: trusty
 install:
-- nuget restore MetaMorpheus.sln
+- dotnet restore MetaMorpheus.sln
 - nuget install NUnit.Console -OutputDirectory testrunner
 script:
-- echo $TRAVIS_TAG 
-- cat CMD/Properties/AssemblyInfo.cs
-- if [ -n "${TRAVIS_TAG}" ]; then sed -i -- 's/1.0.0.0/'$TRAVIS_TAG'/g' CMD/Properties/AssemblyInfo.cs ; fi
-- if [ -n "${TRAVIS_TAG}" ]; then sed -i -- 's/1.0.0.0/'$TRAVIS_TAG'/g' EngineLayer/Properties/AssemblyInfo.cs ; fi
-- cat CMD/Properties/AssemblyInfo.cs
 - xbuild /p:Configuration=TestAndReleaseLinux MetaMorpheus.sln
 - mono ./testrunner/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Test/bin/Release/Test.dll
 - tar -zcvf MonoCommandLine.tar.gz -C CMD/bin/Release .
