--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ install:
 - dotnet restore MetaMorpheus.sln
 - nuget install NUnit.Console -OutputDirectory testrunner
 script:
-- xbuild /p:Configuration=TestAndReleaseLinux MetaMorpheus.sln
-- mono ./testrunner/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Test/bin/Release/Test.dll
+- dotnet build /p:Configuration=TestAndReleaseLinux MetaMorpheus.sln
 - tar -zcvf MonoCommandLine.tar.gz -C CMD/bin/Release .
-- mono CMD/bin/Release/MetaMorpheusCommandLine.exe -t Examples/Task1SearchExample.toml Examples/Task2CalibrationExample.toml Examples/Task3SearchExample.toml Examples/Task4GptmdExample.toml Examples/Task5SearchExample.toml -s Examples/example.mzML -d Examples/mouse-10.xml
+- dotnet CMD/bin/Release/MetaMorpheusCommandLine.exe -t Examples/Task1SearchExample.toml Examples/Task2CalibrationExample.toml Examples/Task3SearchExample.toml Examples/Task4GptmdExample.toml Examples/Task5SearchExample.toml -s Examples/example.mzML -d Examples/mouse-10.xml
+- dotnet ./testrunner/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Test/bin/Release/Test.dll
 deploy:
   provider: releases
   api_key:
