--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ mono: none
 dotnet: 1.0.3
 dist: trusty
 install:
-- dotnet restore MetaMorpheus.sln
+- dotnet restore MetaMorpheus.sln -r linux-x64
 script:
 - dotnet build /p:Configuration=TestAndReleaseLinux MetaMorpheus.sln
 - dotnet CMD/bin/Release/netcoreapp2.0/CMD.dll -t Examples/Task1SearchExample.toml Examples/Task2CalibrationExample.toml Examples/Task3SearchExample.toml Examples/Task4GptmdExample.toml Examples/Task5SearchExample.toml -s Examples/example.mzML -d Examples/mouse-10.xml
