--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,12 @@
 language: csharp
-solution: MetaMorpheus.sln
+mono: none
+dotnet: 1.0.3
+dist: trusty
 install:
-- nuget restore MetaMorpheus.sln
-- nuget install NUnit.Console -OutputDirectory testrunner
+- dotnet restore MetaMorpheus.sln -r linux-x64
 script:
-- echo $TRAVIS_TAG 
-- cat CMD/Properties/AssemblyInfo.cs
-- if [ -n "${TRAVIS_TAG}" ]; then sed -i -- 's/1.0.0.0/'$TRAVIS_TAG'/g' CMD/Properties/AssemblyInfo.cs ; fi
-- if [ -n "${TRAVIS_TAG}" ]; then sed -i -- 's/1.0.0.0/'$TRAVIS_TAG'/g' EngineLayer/Properties/AssemblyInfo.cs ; fi
-- cat CMD/Properties/AssemblyInfo.cs
-- xbuild /p:Configuration=TestAndReleaseLinux MetaMorpheus.sln
-- mono ./testrunner/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Test/bin/Release/Test.dll
-- tar -zcvf MonoCommandLine.tar.gz -C CMD/bin/Release .
-- mono CMD/bin/Release/MetaMorpheusCommandLine.exe -t Examples/Task1SearchExample.toml Examples/Task2CalibrationExample.toml Examples/Task3SearchExample.toml Examples/Task4GptmdExample.toml Examples/Task5SearchExample.toml -s Examples/example.mzML -d Examples/mouse-10.xml
+- dotnet build /p:Configuration=TestAndReleaseLinux MetaMorpheus.sln
+- dotnet CMD/bin/Release/netcoreapp2.0/CMD.dll -t Examples/Task1SearchExample.toml Examples/Task2CalibrationExample.toml Examples/Task3SearchExample.toml Examples/Task4GptmdExample.toml Examples/Task5SearchExample.toml -s Examples/example.mzML -d Examples/mouse-10.xml
 deploy:
   provider: releases
   api_key:
