--- a/GUI/packages.config
+++ b/GUI/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FlashLFQ" version="0.1.93" targetFramework="net451" />
+  <package id="FlashLFQ" version="0.1.95" targetFramework="net461" />
   <package id="MathNet.Numerics" version="3.20.0" targetFramework="net451" />
-  <package id="mzLib" version="1.0.240" targetFramework="net451" />
+  <package id="mzLib" version="1.0.244" targetFramework="net461" />
   <package id="Nett" version="0.8.0" targetFramework="net451" />
-  <package id="Zlib.Portable" version="1.11.0" targetFramework="net451" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
