--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="mzLib" Version="1.0.244" />
+    <PackageReference Include="SharpLearning.CrossValidation" Version="0.26.0" />
+    <PackageReference Include="SharpLearning.DecisionTrees" Version="0.26.0" />
+    <PackageReference Include="SharpLearning.Metrics" Version="0.26.0" />
   </ItemGroup>
 
   <ItemGroup>
