--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -9,13 +9,14 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MetaMorpheusGUI</RootNamespace>
     <AssemblyName>MetaMorpheusGUI</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -78,35 +79,45 @@
     <Reference Include="Proteomics, Version=1.0.240.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\mzLib.1.0.240\lib\Proteomics.dll</HintPath>
     </Reference>
-    <Reference Include="SharpLearning.AdaBoost, Version=0.25.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.AdaBoost.0.25.0.4\lib\net45\SharpLearning.AdaBoost.dll</HintPath>
+    <Reference Include="SharpLearning.AdaBoost">
+      <HintPath>..\packages\SharpLearning.AdaBoost.0.26.0\lib\netstandard2.0\SharpLearning.AdaBoost.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="SharpLearning.Common.Interfaces, Version=0.25.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.Common.Interfaces.0.25.0.4\lib\net45\SharpLearning.Common.Interfaces.dll</HintPath>
+    <Reference Include="SharpLearning.Common.Interfaces">
+      <HintPath>..\packages\SharpLearning.Common.Interfaces.0.26.0\lib\netstandard2.0\SharpLearning.Common.Interfaces.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="SharpLearning.Containers, Version=0.25.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.Containers.0.25.0.4\lib\net45\SharpLearning.Containers.dll</HintPath>
+    <Reference Include="SharpLearning.Containers">
+      <HintPath>..\packages\SharpLearning.Containers.0.26.0\lib\netstandard2.0\SharpLearning.Containers.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="SharpLearning.CrossValidation, Version=0.25.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.CrossValidation.0.25.0.4\lib\net45\SharpLearning.CrossValidation.dll</HintPath>
+    <Reference Include="SharpLearning.CrossValidation">
+      <HintPath>..\packages\SharpLearning.CrossValidation.0.26.0\lib\netstandard2.0\SharpLearning.CrossValidation.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="SharpLearning.DecisionTrees, Version=0.25.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.DecisionTrees.0.25.0.4\lib\net45\SharpLearning.DecisionTrees.dll</HintPath>
+    <Reference Include="SharpLearning.DecisionTrees">
+      <HintPath>..\packages\SharpLearning.DecisionTrees.0.26.0\lib\netstandard2.0\SharpLearning.DecisionTrees.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="SharpLearning.Ensemble, Version=0.25.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.Ensemble.0.25.0.4\lib\net45\SharpLearning.Ensemble.dll</HintPath>
+    <Reference Include="SharpLearning.Ensemble">
+      <HintPath>..\packages\SharpLearning.Ensemble.0.26.0\lib\netstandard2.0\SharpLearning.Ensemble.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="SharpLearning.GradientBoost, Version=0.25.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.GradientBoost.0.25.0.4\lib\net45\SharpLearning.GradientBoost.dll</HintPath>
+    <Reference Include="SharpLearning.GradientBoost">
+      <HintPath>..\packages\SharpLearning.GradientBoost.0.26.0\lib\netstandard2.0\SharpLearning.GradientBoost.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="SharpLearning.InputOutput, Version=0.25.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.InputOutput.0.25.0.4\lib\net45\SharpLearning.InputOutput.dll</HintPath>
+    <Reference Include="SharpLearning.InputOutput">
+      <HintPath>..\packages\SharpLearning.InputOutput.0.26.0\lib\netstandard2.0\SharpLearning.InputOutput.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="SharpLearning.Metrics, Version=0.25.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.Metrics.0.25.0.4\lib\net45\SharpLearning.Metrics.dll</HintPath>
+    <Reference Include="SharpLearning.Metrics">
+      <HintPath>..\packages\SharpLearning.Metrics.0.26.0\lib\netstandard2.0\SharpLearning.Metrics.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="SharpLearning.RandomForest, Version=0.25.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.RandomForest.0.25.0.4\lib\net45\SharpLearning.RandomForest.dll</HintPath>
+    <Reference Include="SharpLearning.RandomForest">
+      <HintPath>..\packages\SharpLearning.RandomForest.0.26.0\lib\netstandard2.0\SharpLearning.RandomForest.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Spectra, Version=1.0.240.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\mzLib.1.0.240\lib\Spectra.dll</HintPath>
@@ -128,9 +139,6 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="Zlib.Portable, Version=1.11.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zlib.Portable.1.11.0\lib\portable-net4+sl5+wp8+win8+wpa81+MonoTouch+MonoAndroid\Zlib.Portable.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
