--- a/Test/packages.config
+++ b/Test/packages.config
@@ -16,5 +16,5 @@
   <package id="SharpLearning.InputOutput" version="0.26.0" targetFramework="net461" />
   <package id="SharpLearning.Metrics" version="0.26.0" targetFramework="net461" />
   <package id="SharpLearning.RandomForest" version="0.26.0" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net451" requireReinstallation="true" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
