--- a/CMD/CMD.csproj
+++ b/CMD/CMD.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentCommandLineParser" Version="1.4.3" />
+    <PackageReference Include="mzLib" Version="1.0.244" />
     <PackageReference Include="Nett" Version="0.8.0" />
   </ItemGroup>
 
