--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FlashLFQ" Version="0.1.95" />
     <PackageReference Include="mzLib" Version="1.0.244" />
     <PackageReference Include="SharpLearning.CrossValidation" Version="0.26.0" />
     <PackageReference Include="SharpLearning.DecisionTrees" Version="0.26.0" />
