--- a/GUI/packages.config
+++ b/GUI/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FlashLFQ" version="0.1.95" targetFramework="net461" />
   <package id="MathNet.Numerics" version="3.20.0" targetFramework="net451" />
   <package id="mzLib" version="1.0.244" targetFramework="net461" />
   <package id="Nett" version="0.8.0" targetFramework="net451" />
@@ -14,5 +13,5 @@
   <package id="SharpLearning.InputOutput" version="0.26.0" targetFramework="net461" />
   <package id="SharpLearning.Metrics" version="0.26.0" targetFramework="net461" />
   <package id="SharpLearning.RandomForest" version="0.26.0" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net451" requireReinstallation="true" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
