--- a/Test/packages.config
+++ b/Test/packages.config
@@ -6,5 +6,15 @@
   <package id="Nett" version="0.8.0" targetFramework="net451" />
   <package id="NUnit" version="3.8.1" targetFramework="net451" />
   <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net451" />
+  <package id="SharpLearning.AdaBoost" version="0.26.0" targetFramework="net461" />
+  <package id="SharpLearning.Common.Interfaces" version="0.26.0" targetFramework="net461" />
+  <package id="SharpLearning.Containers" version="0.26.0" targetFramework="net461" />
+  <package id="SharpLearning.CrossValidation" version="0.26.0" targetFramework="net461" />
+  <package id="SharpLearning.DecisionTrees" version="0.26.0" targetFramework="net461" />
+  <package id="SharpLearning.Ensemble" version="0.26.0" targetFramework="net461" />
+  <package id="SharpLearning.GradientBoost" version="0.26.0" targetFramework="net461" />
+  <package id="SharpLearning.InputOutput" version="0.26.0" targetFramework="net461" />
+  <package id="SharpLearning.Metrics" version="0.26.0" targetFramework="net461" />
+  <package id="SharpLearning.RandomForest" version="0.26.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
