--- a/GUI/packages.config
+++ b/GUI/packages.config
@@ -4,6 +4,7 @@
   <package id="MathNet.Numerics" version="3.20.0" targetFramework="net451" />
   <package id="mzLib" version="1.0.261" targetFramework="net461" />
   <package id="Nett" version="0.8.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="SharpLearning.AdaBoost" version="0.26.5" targetFramework="net461" />
   <package id="SharpLearning.Common.Interfaces" version="0.26.5" targetFramework="net461" />
   <package id="SharpLearning.Containers" version="0.26.5" targetFramework="net461" />
